# ichatbio-data-handler-agent

./: Dockerfile  README.md  pyproject.toml
src/: agent.py  artifact_registry.py  context.py  recording_response_context.py  util.py
src/entrypoints/: process_json.py
src/tools/: concat_lists.py  convert_json_csv.py  join_lists.py  process_data.py  tool.py  util.py
tests/: conftest.py  test_agent.py  test_concat_lists.py  test_convert_json_csv.py  test_join_lists.py  test_process_data.py  test_util.py
tests/preliminary/: test_jq.py  test_langchain.py
tests/resources/: extracted_idigbio_records.json  idigbio_records_search_result.json
