[project]
name = "ichatbio-data-handler-agent"
version = "1"
requires-python = ">=3.12"
dependencies = [
    "ichatbio-sdk~=0.2.6",
    "openai>=1.109.1",
    "pydantic>=2.11.4",
    "instructor>=1.11.3",
    "dotenv>=0.9.9",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0a1",
    "starlette>=0.47.3",
    "uvicorn>=0.34.3",
    "genson>=1.3.0",
    "jq>=1.10.0",
    "pytest_httpx>=0.35.0",
    "langchain>=1.2.10",
    "langchain_openai>=1.1.10",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
log_cli = true
log_cli_level = "INFO"
